--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 07:09:00 PM</p>
+    <p class="lastupdate">09/19/2020 07:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">78.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">78.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">78.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">39%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.832 inHg (-0.005)</td>
+        <td class="data">29.831 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph NNW (338&#176;)</td>
+        <td class="data">6 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.1&#176;F</td>
+        <td class="data">80.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">40%</td>
       </tr>
     </tbody>
   </table>
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          213
+          214
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 4 hours, 22 minutes</td>
+      <td class="data">18 days, 4 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 4 hours, 22 minutes</td>
+      <td class="data">18 days, 4 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
