--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 08:49:00 PM</p>
+    <p class="lastupdate">09/19/2020 08:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">70.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.4&#176;F</td>
+        <td class="data">52.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">53%</td>
+        <td class="data">54%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.862 inHg (0.049)</td>
+        <td class="data">29.867 inHg (0.052)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph N (0&#176;)</td>
+        <td class="data">6 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -444,11 +444,11 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          216
+          217
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          232
+          233
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 6 hours, 2 minutes</td>
+      <td class="data">18 days, 6 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 6 hours, 2 minutes</td>
+      <td class="data">18 days, 6 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
