--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 09:29:00 PM</p>
+    <p class="lastupdate">09/19/2020 09:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">69.1&#176;F</td>
+        <td class="data">69.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">69.1&#176;F</td>
+        <td class="data">69.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">69.1&#176;F</td>
+        <td class="data">69.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.7&#176;F</td>
+        <td class="data">51.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.869 inHg (0.053)</td>
+        <td class="data">29.868 inHg (0.053)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph NNW (338&#176;)</td>
+        <td class="data">8 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 6 hours, 42 minutes</td>
+      <td class="data">18 days, 6 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 6 hours, 42 minutes</td>
+      <td class="data">18 days, 6 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
